--- a/app/src/main/res/layout/nav_header_landing_page.xml
+++ b/app/src/main/res/layout/nav_header_landing_page.xml
@@ -13,16 +13,16 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/shoppingadviserlogo" />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="My Menu"
+        android:textColor="#000000"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 
