--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -27,7 +27,6 @@
             android:layout_marginRight="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="FTrendy Off White Anaarkali"
             android:id="@+id/carttitletextview"
             android:layout_marginLeft="60dp"
             android:layout_toEndOf="@+id/cartproductImage" />
@@ -60,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Total : Rs.1,793"
+            android:text="Total :"
             android:id="@+id/carttotalTextView"
             android:layout_marginTop="20dp"
             android:layout_below="@+id/cartsku"
@@ -68,14 +67,32 @@
 
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Quantity : "
+            android:id="@+id/quantitytext"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/carttotalTextView"
+            android:layout_alignParentStart="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            android:ems="5"
+            android:id="@+id/editqtyText"
+            android:layout_marginLeft="50dp"
+            android:layout_below="@+id/carttotalTextView"
+            android:layout_alignEnd="@+id/cartcontinueButton" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ContinueShopping"
             android:id="@+id/cartcontinueButton"
-            android:layout_marginTop="31dp"
-
+            android:layout_marginTop="50dp"
             android:layout_below="@+id/carttotalTextView" />
        <!--     android:layout_toStartOf="@+id/cartsoldbytextview" /> -->
 
@@ -84,10 +101,11 @@
             android:layout_height="wrap_content"
             android:text="Checkout"
             android:id="@+id/cartcheckoutButton"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:layout_marginLeft="200dp"
             android:layout_below="@+id/carttotalTextView" />
-     <!--       android:layout_toEndOf="@+id/cartStateTextView" />-->
+
+        <!--       android:layout_toEndOf="@+id/cartStateTextView" />-->
 
 
 
