--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -9,6 +9,7 @@
         android:id="@+id/grid_item_image"
         android:layout_width="250dp"
         android:scaleType="fitCenter"
+        android:layout_marginLeft="30dp"
         android:layout_height="250dp" />
 
     <TextView
@@ -27,8 +28,9 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="10dp"
         android:textSize="16sp"
+        android:gravity="left"
         android:focusable="false"
         android:layout_marginTop="5dp"
         android:layout_below="@+id/grid_item_title"
@@ -40,8 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/grid_item_title"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="140dp"
         android:layout_marginTop="5dp"
+        android:gravity="left"
         android:text="1000"
         android:textSize="16sp"
         />
@@ -51,8 +54,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/price"
-        android:layout_centerInParent="true"
         android:background="#2482ed"
+        android:layout_marginLeft="100dp"
         android:text="Add to Cart"
         android:textSize="10sp"
         android:textColor="#FFF"
