--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="blue">#00abea</color>
     <color name="white">#ffffff</color>
+    <color name="duskYellow">#fcfc3a</color>
+    <color name="lightGrey">#e6e6e4</color>
 </resources>
