--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -1,195 +1,215 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container_scroll_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.tls.sampletwo.CheckoutActivityFragment"
-    tools:showIn="@layout/activity_checkout">
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context="com.example.tls.sampletwo.CheckoutActivityFragment"
+            tools:showIn="@layout/activity_checkout">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Enter your address"
-        android:id="@+id/checkoutenteraddresstextview"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Enter your address"
+                android:id="@+id/checkoutenteraddresstextview"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="FN: "
-        android:id="@+id/checkoutfirstnametextview"
-        android:layout_below="@+id/checkoutenteraddresstextview"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="31dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="FN: "
+                android:id="@+id/checkoutfirstnametextview"
+                android:layout_below="@+id/checkoutenteraddresstextview"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="38dp" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="6"
-        android:id="@+id/checkoutfnameedittext"
-        android:layout_alignBottom="@+id/checkoutfirstnametextview"
-        android:layout_toEndOf="@+id/checkoutfirstnametextview" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="25"
+                android:id="@+id/checkoutfnameedittext"
+                android:layout_alignBottom="@+id/checkoutfirstnametextview"
+                android:layout_toEndOf="@+id/checkoutlastnametextview" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="LN: "
-        android:id="@+id/checkoutlastnametextview"
-        android:layout_alignBottom="@+id/checkoutfnameedittext"
-        android:layout_centerHorizontal="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="LN: "
+                android:id="@+id/checkoutlastnametextview"
+                android:layout_marginTop="130dp"
+                android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="6"
-        android:id="@+id/checkoutlnameedittext"
-        android:layout_alignBottom="@+id/checkoutfirstnametextview"
-        android:layout_toEndOf="@+id/checkoutlastnametextview" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="20"
+                android:id="@+id/checkoutlnameedittext"
+                android:layout_alignBottom="@+id/checkoutlastnametextview"
+                android:layout_marginTop="95dp"
+                android:layout_alignParentEnd="true"
+                android:layout_toEndOf="@+id/checkoutlastnametextview" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Email-id: "
-        android:id="@+id/checkoutemailtextview"
-        android:layout_marginTop="23dp"
-        android:layout_below="@+id/checkoutfnameedittext"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Email-id: "
+                android:id="@+id/checkoutemailtextview"
+                android:layout_marginTop="110dp"
+                android:layout_below="@+id/checkoutfnameedittext"
+                android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:id="@+id/checkoutemailedittext"
-        android:layout_alignBottom="@+id/checkoutemailtextview"
-        android:layout_toEndOf="@+id/checkoutemailtextview" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:ems="11"
+                android:id="@+id/checkoutemailedittext"
+                android:layout_above="@+id/checkoutphonetextview"
+                android:layout_alignParentEnd="true"
+                android:layout_toEndOf="@+id/checkoutemailtextview" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Phone: "
-        android:id="@+id/checkoutphonetextview"
-        android:layout_above="@+id/checkoutcountryedittext"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Phone: "
+                android:id="@+id/checkoutphonetextview"
+                android:layout_below="@+id/checkoutemailtextview"
+                android:layout_marginTop="40dp"
+                android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="phone"
-        android:ems="10"
-        android:id="@+id/checkoutphoneedittext"
-        android:layout_alignBottom="@+id/checkoutphonetextview"
-        android:layout_toEndOf="@+id/checkoutphonetextview" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:ems="13"
+                android:id="@+id/checkoutphoneedittext"
+                android:layout_alignBottom="@+id/checkoutphonetextview"
+                android:layout_alignEnd="@+id/checkoutemailedittext"
+                android:layout_toEndOf="@+id/checkoutphonetextview" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Country: "
-        android:id="@+id/checkoutcountrytextview"
-        android:layout_above="@+id/checkoutstreetedittext"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Country: "
+                android:layout_marginTop="335dp"
+                android:id="@+id/checkoutcountrytextview"
+                android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkoutcountryedittext"
-        android:layout_alignBottom="@+id/checkoutcountrytextview"
-        android:layout_alignEnd="@+id/checkoutphoneedittext"
-        android:layout_toEndOf="@+id/checkoutemailtextview" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkoutcountryedittext"
+                android:layout_alignBottom="@+id/checkoutcountrytextview"
+                android:layout_alignEnd="@+id/checkoutphoneedittext"
+                android:layout_toEndOf="@+id/checkoutemailtextview" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Street: "
-        android:id="@+id/checkoutstreettextview"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Street: "
+                android:layout_marginTop="410dp"
+                android:id="@+id/checkoutstreettextview"
+                android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPostalAddress"
-        android:ems="10"
-        android:id="@+id/checkoutstreetedittext"
-        android:layout_alignBottom="@+id/checkoutstreettextview"
-        android:layout_toEndOf="@+id/checkoutstreettextview" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPostalAddress"
+                android:ems="12"
+                android:id="@+id/checkoutstreetedittext"
+                android:layout_alignBottom="@+id/checkoutstreettextview"
+                android:layout_alignEnd="@+id/checkoutcountryedittext"
+                android:layout_alignStart="@+id/checkoutphoneedittext" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Town/City: "
-        android:id="@+id/checkouttowntextview"
-        android:layout_marginTop="24dp"
-        android:layout_below="@+id/checkoutstreettextview"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Town/City: "
+                android:id="@+id/checkouttowntextview"
+                android:layout_marginTop="55dp"
+                android:layout_below="@+id/checkoutstreettextview"
+                android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/checkouttownedittext"
-        android:layout_alignBottom="@+id/checkouttowntextview"
-        android:layout_toEndOf="@+id/checkouttowntextview" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:id="@+id/checkouttownedittext"
+                android:layout_alignBottom="@+id/checkouttowntextview"
+                android:layout_alignEnd="@+id/checkoutstreetedittext"
+                android:layout_toEndOf="@+id/checkouttowntextview" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="State: "
-        android:id="@+id/checkoutstatetextview"
-        android:layout_marginTop="23dp"
-        android:layout_below="@+id/checkouttowntextview"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="State: "
+                android:id="@+id/checkoutstatetextview"
+                android:layout_marginTop="55dp"
+                android:layout_below="@+id/checkouttowntextview"
+                android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkoutstateedittext"
-        android:layout_alignBottom="@+id/checkoutstatetextview"
-        android:layout_alignStart="@+id/checkoutphoneedittext"
-        android:layout_alignEnd="@+id/checkoutemailedittext" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkoutstateedittext"
+                android:layout_alignBottom="@+id/checkoutstatetextview"
+                android:layout_alignEnd="@+id/checkouttownedittext"
+                android:layout_toEndOf="@+id/checkoutstatetextview" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="ZIP: "
-        android:id="@+id/checkoutziptextview"
-        android:layout_alignBottom="@+id/checkoutzipedittext"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="ZIP: "
+                android:id="@+id/checkoutziptextview"
+                android:layout_marginTop="650dp"
+                android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/checkoutzipedittext"
-        android:layout_below="@+id/checkoutstatetextview"
-        android:layout_toEndOf="@+id/checkoutziptextview" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="30"
+                android:id="@+id/checkoutzipedittext"
+                android:layout_alignBottom="@+id/checkoutziptextview"
+                android:layout_toEndOf="@+id/checkoutziptextview" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Order Now"
-        android:id="@+id/checkoutordernowbutton"
-        android:layout_below="@+id/checkoutzipedittext"
-        android:onClick="onStartTransaction"
-        android:layout_centerHorizontal="true" />
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Order Now"
+                android:id="@+id/checkoutordernowbutton"
+                android:layout_marginTop="800dp"
+                android:onClick="onStartTransaction"
+                android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
