--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="RatingBar" parent="Theme.AppCompat">
-        <item name="colorControlNormal">@color/duskYellow</item>
+        <item name="colorControlNormal">@color/yellow</item>
         <item name="colorControlActivated">@color/lightGrey</item>
     </style>
 
