--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -20,14 +20,23 @@
         android:id="@+id/imageView3" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:textSize="16dp"
         android:text="Welcome to ShoppingAdviser"
         android:layout_marginLeft="70dp"
         android:layout_marginTop="12dp"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2"
+        />
 
+    <Button
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/cart"
+        android:id="@+id/ViewcartButton"
+        android:layout_marginLeft="170dp"
+        android:layout_alignRight="@+id/textView2"
+        android:layout_alignParentRight="true"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
