--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,6 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="false">
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -28,6 +30,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/carttitletextview"
+            android:text="Title......................"
             android:layout_marginLeft="60dp"
             android:layout_toEndOf="@+id/cartproductImage" />
 
@@ -59,22 +62,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Total :"
-            android:id="@+id/carttotalTextView"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/cartsku"
-            android:layout_alignParentStart="true" />
-
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Quantity : "
             android:id="@+id/quantitytext"
             android:layout_marginTop="20dp"
-            android:layout_below="@+id/carttotalTextView"
+            android:layout_below="@+id/cartproductImage"
             android:layout_alignParentStart="true" />
 
         <EditText
@@ -82,31 +73,44 @@
             android:layout_height="wrap_content"
             android:text="1"
             android:ems="5"
+            android:focusable="false"
+            android:editable="false"
             android:id="@+id/editqtyText"
             android:layout_marginLeft="50dp"
-            android:layout_below="@+id/carttotalTextView"
+            android:layout_below="@+id/cartproductImage"
             android:layout_alignEnd="@+id/cartcontinueButton" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ContinueShopping"
-            android:id="@+id/cartcontinueButton"
-            android:layout_marginTop="50dp"
-            android:layout_below="@+id/carttotalTextView" />
-       <!--     android:layout_toStartOf="@+id/cartsoldbytextview" /> -->
+        <!--<CheckBox-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/CheckBoxSelected"-->
+            <!--android:focusable="false"-->
+            <!--android:layout_toEndOf="@+id/editqtyText"-->
+            <!--android:clickable="false"-->
+            <!--android:layout_marginLeft="70dp"-->
+            <!--android:layout_gravity="left"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_below="@+id/cartproductImage">-->
+        <!--</CheckBox>-->
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Checkout"
-            android:id="@+id/cartcheckoutButton"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="200dp"
-            android:layout_below="@+id/carttotalTextView" />
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="ContinueShopping"-->
+            <!--android:id="@+id/cartcontinueButton"-->
+            <!--android:layout_marginTop="50dp"-->
+            <!--android:layout_below="@+id/carttotalTextView" />-->
+       <!--&lt;!&ndash;     android:layout_toStartOf="@+id/cartsoldbytextview" /> &ndash;&gt;-->
 
-        <!--       android:layout_toEndOf="@+id/cartStateTextView" />-->
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Checkout"-->
+            <!--android:id="@+id/cartcheckoutButton"-->
+            <!--android:layout_marginTop="50dp"-->
+            <!--android:layout_marginLeft="200dp"-->
+            <!--android:layout_below="@+id/carttotalTextView" />-->
 
+        <!--&lt;!&ndash;       android:layout_toEndOf="@+id/cartStateTextView" />&ndash;&gt;-->
 
 
     </RelativeLayout>
