--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -119,12 +119,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:text="0000"
                 android:layout_below="@+id/ratingBar"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="220dp"
                 />
 
-           <!-- <TextView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -137,20 +138,19 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="phone"
                 android:ems="5"
-                android:id="@+id/editText"
+                android:id="@+id/qtyeditText"
+                android:text="1"
                 android:layout_below="@+id/priceTextView"
                 android:layout_toEndOf="@+id/qtyTextView"
-                android:focusable = "false"
+                android:focusable = "true"
                 android:layout_marginLeft="50dp"
-                />-->
+                />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Buy Now"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="60dp"
                 android:id="@+id/buyNowbtn"
                 android:layout_below="@+id/discountPriceTextView"
                 android:background="#157cf9"
