--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -23,7 +23,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:textSize="16dp"
-        android:text="Welcome to ShoppingAdviser"
+        android:text="Welcome"
         android:layout_marginLeft="70dp"
         android:layout_marginTop="12dp"
         android:id="@+id/textView2"
