--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -53,20 +53,24 @@
         android:layout_below="@+id/textView2"
         android:layout_toStartOf="@+id/button"
         android:layout_marginTop="40dp"/>
+
     <EditText
         android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:id="@+id/search_edit_text"
-        android:layout_alignBottom="@+id/searchbtn"
-         />
+        android:layout_below="@+id/button2"
+        android:layout_alignBottom="@+id/searchbtn" />
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Search"
         android:id="@+id/searchbtn"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="250dp"/>
+        android:layout_below="@+id/button2"
+        android:layout_alignParentRight="true"
+        />
+
 
     <HorizontalScrollView
         android:layout_width="match_parent"
