--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -29,8 +29,10 @@
     <Button
         android:id="@+id/button3"
         android:text="Login"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/etPassword"
+
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
